<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/lismusica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/lismusica" />

        <ImageView
            android:id="@+id/scrolled_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_logo"
            android:alpha="0.8"
            android:adjustViewBounds="true"
            android:scrollbars="vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/rock" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lismusica"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rock_salt"
            android:paddingBottom="@dimen/padding_sizetb"
            android:paddingLeft="@dimen/padding_sizelr"
            android:paddingRight="@dimen/padding_sizelr"
            android:paddingTop="@dimen/padding_sizetb"
            android:background="@drawable/rounded_corner"
            android:alpha="0.7"
            android:text="@string/contact"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/business"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/top_margin"
            android:alpha="0.8"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/ic_business_center"
            android:drawablePadding="@dimen/drawable_padding"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/padding_sizetb"
            android:paddingLeft="@dimen/padding_sizelr"
            android:paddingTop="@dimen/padding_sizetb"
            android:text="@string/business"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />


        <TextView
            android:id="@+id/address"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/business"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:alpha="0.8"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/ic_place"
            android:drawablePadding="@dimen/drawable_padding"
            android:fontFamily="sans-serif"
            android:paddingLeft="@dimen/padding_sizelr"
            android:paddingRight="@dimen/padding_sizelr"
            android:paddingTop="@dimen/padding_sizetb"
            android:text="@string/address"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/postal"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_centerHorizontal="true"
            android:alpha="0.8"
            android:background="@android:color/black"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/padding_sizetb"
            android:paddingLeft="40dp"
            android:text="@string/postal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/postal"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:alpha="0.8"
            android:autoLink="phone"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/ic_local_phone"
            android:drawablePadding="@dimen/drawable_padding"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/padding_sizetb"
            android:paddingLeft="@dimen/padding_sizelr"
            android:paddingRight="@dimen/padding_sizelr"
            android:paddingTop="@dimen/padding_sizetb"
            android:text="@string/phone"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/email"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:alpha="0.8"
            android:autoLink="email"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/padding_sizetb"
            android:paddingLeft="@dimen/padding_sizelr"
            android:paddingRight="@dimen/padding_sizelr"
            android:paddingTop="@dimen/padding_sizetb"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/hours1"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:alpha="0.8"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/ic_schedule"
            android:drawablePadding="@dimen/drawable_padding"
            android:fontFamily="sans-serif"
            android:paddingLeft="@dimen/padding_sizelr"
            android:paddingTop="@dimen/padding_sizetb"
            android:text="@string/hours1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/hours2"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/hours1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:alpha="0.8"
            android:background="@android:color/black"
            android:fontFamily="sans-serif"
            android:paddingLeft="40dp"
            android:paddingRight="@dimen/padding_sizelr"
            android:text="@string/hours2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/hours3"
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/hours2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:alpha="0.8"
            android:background="@android:color/black"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/padding_sizetb"
            android:paddingBottom="@dimen/padding_sizetb"
            android:paddingLeft="40dp"
            android:paddingRight="@dimen/padding_sizelr"
            android:text="@string/hours3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/hours3"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:alpha="0.8"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/rock_salt"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/check"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:drawableBottom="@drawable/ic_arrow_downward"/>

        <ImageView
            android:id="@+id/store_img"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_below="@id/hours3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/lismusica_guitarra"/>

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_below="@id/store_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/drums"/>
    </RelativeLayout>
</ScrollView>